Fix overflow for dynamic menu

--- a/src/style.css
+++ b/src/style.css
@@ -347,7 +347,7 @@ input[type="checkbox"]:checked~.collapsible {
 .menu-dynamic .menu {
   transform: translateX(-100%);
   transition: transform 1s cubic-bezier(0.86, 0.01, 0.77, 0.78);
-  min-height: 100%;
+  height: 100%;
   display: flex;
   align-items: stretch;
   justify-content: flex-end;
@@ -360,12 +360,10 @@ input[type="checkbox"]:checked~.collapsible {
 
 .menu-dynamic .menu nav {
   background-color: var(--color-secondary);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-left: 1.2rem;
-  padding-right: 1.2rem;
+  padding: 1.4rem 1.2rem 1rem 1.2rem;
+  overflow-y: auto;
+  height: 100%;
+  box-shadow: -2px 0px 4px rgba(0,0,0,0.5);
 }
 
 @keyframes scroll-down {
